git add . git commit -m "Fix hopfuly" git push

--- a/.github/workflows/run-every-10mins.yml
+++ b/.github/workflows/run-every-10mins.yml
@@ -17,4 +17,4 @@ jobs:
           python-version: 3.11
 
       - name: Run the Python script
-        run: python story1.py
+        run: /backend/python story1.py
