git add . git commit -m "uhh 67" git commit

--- a/.github/workflows/run-every-10mins.yml
+++ b/.github/workflows/run-every-10mins.yml
@@ -17,4 +17,4 @@ jobs:
           python-version: 3.11
 
       - name: Run the Python script
-        run: /backend/python story1.py
+        run: python backend/story1.py
