git add . git commit -m "imports1" git push

--- a/.github/workflows/run-every-10mins.yml
+++ b/.github/workflows/run-every-10mins.yml
@@ -18,3 +18,5 @@ jobs:
 
       - name: Run the Python script
         run: python backend/story1.py
+      - name: Install dependencies
+        run: pip install -r requirements.txt
