git add . git commit -m "Your descriptive commit message" git push

--- a/.github/workflows/run-every-10mins.yml
+++ b/.github/workflows/run-every-10mins.yml
@@ -36,4 +36,5 @@ jobs:
         env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          git push https://$PAT_TOKEN@github.com/RiptideVideos/JustTheInfo.git HEAD:main
+          git push https://$PAT_TOKEN@github.com/RiptideVideos/JustTheInfo.git
+          git push origin main
