--- a/.github/workflows/run-every-10mins.yml
+++ b/.github/workflows/run-every-10mins.yml
@@ -1,5 +1,8 @@
 name: Run Python script every 10 minutes
-
+permissions:
+  contents: write
+  pull-requests: write
+  
 on:
   schedule:
     - cron: "*/10 * * * *"
